# aimaze

./: .env  .gitignore  README.md  flake.nix  main.py  pyproject.toml  requirements.txt  test.py  tmp.json
data_explore/: download.md  token_count.py  yaml_parse.py
scraper/: content_processor.py  scraper_agent.py
scraper_benchmark/: benchmark_data.json  benchmark_summary.json  scraper.py
scraper_benchmark/eval_db/: test.py
scraper_benchmark/source_html/: stripe.html
src/: AIMaze_EDA.ipynb  aitest.py  asana.html  coder.py  json_to_code.py  main.py  parser.py  prompts.py  results.json  schema.py  schema_extractor.py  schemas.py  scrape.py  scraper.py  test.py  token_counter.py  transpiler.py
src/scraper/: aimaze-data-preparation.ipynb  benchmark_data.json  chinker.py  chunker.py  chunker_research.ipynb  data_preparation.ipynb  scraper.py  scraper_benchmark.py  test.ipynb  test.py
src/scraper/eval_db/: db_utils.py  init_db.py  test.py
src/scraper/source_html/: test.md
src/shared/: FunctionClass.py  InputClass.py  OutputClass.py  OutputParameterClass.py  ParameterClass.py  WooCommerceClass.py  concat.sh  create_coupon.py  delete_coupon.py  get_coupon.py  get_coupons.py
src/test/: all_types.py  mockup.py  out.py  test.html  test.md  tmp.py
src/test/wooCommerce/: wooCommerce.html
test/: BaseClass.py  ValidationClass.py  code_raw.py  crash.py  gh.py  spotify.py  webwinkel.py
test/examples/: create_coupon.py
test/examples/woo/: WooCommerceClass.py  delete_coupon.py  (+1 more)
test/types/: FunctionClass.py  InputClass.py  OutputClass.py  OutputParameterClass.py
