[project]
name = "aimaze"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "jsonschema>=4.23.0",
    "markdownify>=1.1.0",
    "openai>=1.82.0",
    # "pyyaml>=6.0.2",
    "requests>=2.32.3",
    # "setuptools>=80.9.0",
    "tiktoken>=0.9.0",
    "validators>=0.35.0",
]
